Fix all findbugs warnings
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/commons/trunk@1681108 13f79535-47bb-0310-9956-ffa450edef68